--- a/src/index.scss
+++ b/src/index.scss
@@ -76,6 +76,7 @@ body{
                  font-size: $logoFontSize;
                  font-family: $primeryFont;
                 color: $secodery;
+                text-decoration: none;
             }
 
             ul{
@@ -204,7 +205,7 @@ body{
                 .close{
                     transition: .4s linear;
                     position: absolute;
-                    right: -95%;
+                    right: -110%;
                     top:-330%;
                     background-color:$light;
                     width:45rem;
