--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -25,14 +25,14 @@
         }
 
         .note{
-            color:rgb(56, 221, 6);
-            border-color: rgb(50, 192, 6);
+            color:#deebe7;
+            border-color:#deebe7;
 
             big{
-                color:#0076ff;
+                color:#deebe7;
             }
             span{
-                color:rgb(177, 207, 7)
+                color:rgb(243, 219, 5)
             }
         }
         display:flex;
@@ -78,7 +78,7 @@
         .head{
             font-size: 3.5rem;
             font-family: "Poppins";
-            color:#0076ff;
+            color:#deebe7;
         }
         .prag{
             font-size: 20px;
