--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -11,6 +11,64 @@
     right:0;
     z-index:10000;
     display: none;
+    
+
+    .pending{
+        width:350px;
+        height:300px;
+        border-radius: 15px;
+        background:#0007;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        position:relative;
+        div{
+            position: absolute;  
+        }
+        .loader{
+            width:12rem;
+            height:12rem;
+            border-radius:50%;
+            border: 2px dashed lime;
+            animation:loader .7s linear infinite  forwards;
+        }
+        .waiting{
+            position: absolute;
+            bottom:10px;
+            color:whitesmoke;
+            font-size:2rem;
+            font-family:'Poppins';
+            padding:1rem;
+
+            span{
+                font-size: 1.6rem;
+                font-family: "Poppins";
+                font-style: italic;color:rgb(195, 216, 213)
+            }
+
+        }
+
+        @keyframes loader {
+            0%{
+                transform: rotate(10deg);
+                background-color: rgb(150, 39, 39);
+            }
+            50%{
+                transform:rotate(260deg);
+                background:rgb(51, 153, 127);
+            }
+            100%{
+                transform:rotate(360deg);
+                background-color: rgb(98, 47, 163);
+            }
+        }
+
+        .msg{
+            color:#0076ff;
+            font-size: 2rem;
+            font-family: arial;
+        }
+    }
 
     .exit{
         width:3.5rem;
@@ -50,7 +108,7 @@
         flex-direction: column;
         align-items: center;
         background-color: #169F0A;
-        animation: noteblog .7s linear
+        animation: noteblog 7s linear
           infinite forwards;
 
          @keyframes noteblog {
@@ -58,10 +116,10 @@
                 transform: scale(1);
             }
             50%{
-                transform: scale(1.1);
+                transform: scale(1.3);
             }
             100%{
-                transform: scale(1);
+                transform: scale(.7);
             }
          }
         .mark{
@@ -194,6 +252,10 @@
     .noteScreen{
 
         .noteBlog{
+            width:80%;
+        }
+
+        .pending{
             width:80%;
         }
     }
